# decklink-configurator

./: CMakeLists.txt  LICENSE  README.md
src/: mainwindow.cc  platform.h
